--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "serve": "npm run build && node dist/index.js"
   },
   "dependencies": {
-    "chalk": "^2.4.2"
+    "chalk": "^2.4.2",
+    "inquirer": "^6.3.1"
   },
   "devDependencies": {
+    "@types/inquirer": "^6.0.3",
     "@types/node": "^12.0.2",
     "rimraf": "^2.6.3",
     "ts-loader": "^6.0.1",
