--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "npm run clean && npm run lint && webpack",
-    "serve": "npm run build && node dist/index.js"
+    "serve": "npm run build && node dist/index.js",
+    "docs": "typedoc --options typedoc.json --exclude '**/*+(e2e|spec|index|mock).ts' ./src/"
   },
   "dependencies": {
     "chalk": "^2.4.2",
@@ -32,6 +33,7 @@
     "ts-node": "^8.1.1",
     "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1",
+    "typedoc": "^0.14.2",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
