feat(test): - Setup of mocha, chai, sinon for unit testing - Added nyc as coverage reporter - Extracted user info messages to static file

--- a/package.json
+++ b/package.json
@@ -17,18 +17,41 @@
   "scripts": {
     "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
+    "lint:test": "tslint --force --format verbose \"test/**/*.ts\"",
     "build": "npm run clean && npm run lint && webpack",
     "serve": "npm run build && node dist/index.js",
-    "docs": "typedoc --options typedoc.json --exclude '**/*+(e2e|spec|index|mock).ts' ./src/"
+    "docs": "typedoc --options typedoc.json --exclude '**/*+(e2e|spec|index|mock).ts' ./src/",
+    "test": "nyc mocha -r ts-node/register test/**/**.test.ts"
+  },
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "include": [
+      "src"
+    ],
+    "reporter": [
+      "html"
+    ],
+    "all": true
   },
   "dependencies": {
     "chalk": "^2.4.2",
     "inquirer": "^6.3.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/inquirer": "^6.0.3",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.2",
+    "@types/sinon": "^7.0.12",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
+    "sinon": "^7.3.2",
+    "source-map-support": "^0.5.12",
     "ts-loader": "^6.0.1",
     "ts-node": "^8.1.1",
     "tslint": "^5.16.0",
