--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "include": [
       "src"
     ],
+    "exclude": [
+      "src/index.ts"
+    ],
     "reporter": [
-      "html"
+      "html",
+      "text"
     ],
     "all": true
   },
